inserido charset utf-8

--- a/contato.html
+++ b/contato.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
+	<meta charset="utf-8"/>
 	<title>Contato - Gta Stories</title>
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
