--- a/videos.html
+++ b/videos.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
+	<meta charset="utf-8"/>
 	<title>Vídeos - Gta Stories</title>
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
