arrumado textos que não estavam em utf-8

--- a/contato.html
+++ b/contato.html
@@ -6,10 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-
-<audio controls>
-	<source src="./sound/mscgta.mp3" type="audio/mpeg">
-</audio>
+	<audio controls>
+		<source src="./sound/mscgta.mp3" type="audio/mpeg">
+	</audio>
 
 	<div id="container">
 		<div id="header">
@@ -19,33 +18,34 @@
 		<div id="menu">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="versoes.html">Versıes</a></li>
-				<li><a href="videos.html">VÌdeos</a></li>
+				<li><a href="versoes.html">Vers√µes</a></li>
+				<li><a href="videos.html">V√≠deos</a></li>
 				<li><a href="contato.html">Contato</a></li>								
 			</ul>
-		</div><center><br>
-
-<map name="mapa_figuras">
-<area shape="circle" coords="74,76,66" href="https://twitter.com/Rehmoorais" target="_blank">
-<area shape="circle" coords="210,76,66" href="mailto:renanmorais@live.com">
-</map>
-<img src="./img/redessociais.png" usemap="#mapa_figuras" border="0">
-<br>
-
-<iframe src="http://www.facebook.com/plugins/follow?href=https%3A%2F%2Fwww.facebook.com%2Frehmoorais&amp;layout=standard&amp;show_faces=true&amp;colorscheme=light&amp;width=450&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true"></iframe>
-
-<div id="titulos">
-Autor do site:
-<div id="fontepg">
-Renan Morais da Silva, cursando 2∞ semestre de (ADS) Analise e Desenvolvimento de Sistemas na faculdade Anhanguera de S„o Bernardo do Campo. Site criado para o final da disciplina iteraÁ„o humano e computador do professor Nilson Borges. Agradecimento ao professor pela ajuda no desenvolvimento e consulta.</div>
-
-
-Sobre o site:</div>
-<div id="fontepg">
-Escolhido como tema todas as versıes do Grand Theft Auto e sua evoluÁ„o em sua versıes 2D, 3D e HD.</div></center><br>
-
-<a href="./subpg/formulario.html" target="formulario"><img src="./img/duvidas.png"></a>
-<iframe src="" name="formulario"></iframe>
-</div></center>
+		</div>
+		<center>
+			<map name="mapa_figuras">
+				<area shape="circle" coords="74,76,66" href="https://twitter.com/Rehmoorais" target="_blank">
+				<area shape="circle" coords="210,76,66" href="mailto:renanmorais@live.com">
+			</map>
+			<img src="./img/redessociais.png" usemap="#mapa_figuras" border="0">
+			<br>
+			<iframe src="http://www.facebook.com/plugins/follow?href=https%3A%2F%2Fwww.facebook.com%2Frehmoorais&amp;layout=standard&amp;show_faces=true&amp;colorscheme=light&amp;width=450&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true"></iframe>
+			<div id="titulos">
+				Autor do site:
+				<div id="fontepg">
+					Renan Morais da Silva, cursando 2¬∞ semestre de (ADS) Analise e Desenvolvimento de Sistemas na faculdade Anhanguera de S√£o Bernardo do Campo. Site criado para o final da disciplina itera√ß√£o humano e computador do professor Nilson Borges. Agradecimento ao professor pela ajuda no desenvolvimento e consulta.
+				</div>
+				Sobre o site:
+			</div>
+			<div id="fontepg">
+				Escolhido como tema todas as vers√µes do Grand Theft Auto e sua evolu√ß√£o em sua vers√µes 2D, 3D e HD.
+			</div><br>
+			<a href="./subpg/formulario.html" target="formulario">
+				<img src="./img/duvidas.png">
+			</a>
+			<iframe src="" name="formulario"></iframe>
+			</div>
+		</center>
 </body>
 </html>
