--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-
-<audio controls>
-	<source src="./sound/mscgta.mp3" type="audio/mpeg">
-</audio>
+	<audio controls>
+		<source src="./sound/mscgta.mp3" type="audio/mpeg">
+	</audio>
 
 	<div id="container">
 		<div id="header">
@@ -19,21 +18,21 @@
 		<div id="menu">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="versoes.html">Versıes</a></li>
-				<li><a href="videos.html">VÌdeos</a></li>
+				<li><a href="versoes.html">Vers√µes</a></li>
+				<li><a href="videos.html">V√≠deos</a></li>
 				<li><a href="contato.html">Contato</a></li>								
 			</ul>
 		</div>
 
 		<div id="fontepg">
-		Grand Theft Auto È uma sÈrie de jogos de computador e videogames criada por David Jones e Mike Dailly, e posteriormente pelos irm„os Dan e Sam Houser, Leslie Benzies e Aaron Garbut. A maioria dos jogos foi desenvolvida pela Rockstar North (antiga DMA Design) e publicada pela Rockstar Games. O nome da sÈrie È um termo policial da lÌngua inglesa utilizado para identificar roubos de automÛveis. Grand Theft refere-se a furtos de valor elevado (maior que US$ 40,00 nos Estados Unidos) e Auto designa os automÛveis. O nome desse crime, no Brasil, È Roubo Qualificado de AutomÛveis e em Portugal designa-se por carjacking. A sÈrie GTA faz homenagens a diversas personalidades como Eazy-E (inspirou o personagem Ryder no game Grand Theft Auto: San Andreas) e outras.<p>
-		A sÈrie È focada em cidades fictÌcias dominadas pelo crime e pelas gangues de rua, fortemente modeladas com base em grandes metrÛpoles, principalmente dos Estados Unidos, mas com passagens tambÈm pela Inglaterra. Os jogos da sÈrie s„o em mundo aberto e o personagem jog·vel (um criminoso, protagonista de um enredo repleto de atividades ilegais, como violÍncia, tr·fico de drogas, assassinato, prostituiÁ„o etc.) pode cumprir missıes para o progresso da histÛria, bem como participar de aÁıes n„o lineares, todas consistindo de aÁ„o, aventura, conduÁ„o, RPG, corridas, entre outros.</p><p>
-		O desenvolvedor de videogames DMA Design foi respons·vel pelo inÌcio da sÈrie em 1997, que atualmente conta com onze jogos autÙnomos e quatro pacotes de expans„o. O terceiro jogo da cronologia, Grand Theft Auto III, foi muito elogiado, j· que trouxe a sÈrie para um cen·rio 3D com muito mais experiÍncia, e È considerado um tÌtulo de referÍncia para o jogo Grand Theft Auto clone. TÌtulos subsequentes, tais como Driv3r, tiveram seu desenvolvimento baseado no padr„o introduzido em Grand Theft Auto III.</p><p>
-		A franquia, assim como Call of Duty, È um dos produtos de entretenimento mais rent·veis na histÛria, arrecadando com seu ˙ltimo lanÁamento quase um bilh„o de dÛlares nas primeiras 24 horas de lanÁamento. Bateu tambÈm v·rios recordes no Guinness Book, inclusive como o jogo de aÁ„o de videogame a alcanÁar o maior valor em vendas em 24 horas.</p></div><br>
-
-	<center>
-	<iframe width="854" height="480" src="https://www.youtube.com/embed/m146FOEFeSs" frameborder="5" allowfullscreen></iframe><br><br>
-	</center></div>
-
+			<p>Grand Theft Auto √© uma s√©rie de jogos de computador e videogames criada por David Jones e Mike Dailly, e posteriormente pelos irm√£os Dan e Sam Houser, Leslie Benzies e Aaron Garbut. A maioria dos jogos foi desenvolvida pela Rockstar North (antiga DMA Design) e publicada pela Rockstar Games. O nome da s√©rie √© um termo policial da l√≠ngua inglesa utilizado para identificar roubos de autom√≥veis. Grand Theft refere-se a furtos de valor elevado (maior que US$ 40,00 nos Estados Unidos) e Auto designa os autom√≥veis. O nome desse crime, no Brasil, √© Roubo Qualificado de Autom√≥veis e em Portugal designa-se por carjacking. A s√©rie GTA faz homenagens a diversas personalidades como Eazy-E (inspirou o personagem Ryder no game Grand Theft Auto: San Andreas) e outras.</p>
+			<p>A s√©rie √© focada em cidades fict√≠cias dominadas pelo crime e pelas gangues de rua, fortemente modeladas com base em grandes metr√≥poles, principalmente dos Estados Unidos, mas com passagens tamb√©m pela Inglaterra. Os jogos da s√©rie s√£o em mundo aberto e o personagem jog√°vel (um criminoso, protagonista de um enredo repleto de atividades ilegais, como viol√™ncia, tr√°fico de drogas, assassinato, prostitui√ß√£o etc.) pode cumprir miss√µes para o progresso da hist√≥ria, bem como participar de a√ß√µes n√£o lineares, todas consistindo de a√ß√£o, aventura, condu√ß√£o, RPG, corridas, entre outros.</p>
+			<p>O desenvolvedor de videogames DMA Design foi respons√°vel pelo in√≠cio da s√©rie em 1997, que atualmente conta com onze jogos aut√¥nomos e quatro pacotes de expans√£o. O terceiro jogo da cronologia, Grand Theft Auto III, foi muito elogiado, j√° que trouxe a s√©rie para um cen√°rio 3D com muito mais experi√™ncia, e √© considerado um t√≠tulo de refer√™ncia para o jogo Grand Theft Auto clone. T√≠tulos subsequentes, tais como Driv3r, tiveram seu desenvolvimento baseado no padr√£o introduzido em Grand Theft Auto III.</p>
+			<p>A franquia, assim como Call of Duty, √© um dos produtos de entretenimento mais rent√°veis na hist√≥ria, arrecadando com seu √∫ltimo lan√ßamento quase um bilh√£o de d√≥lares nas primeiras 24 horas de lan√ßamento. Bateu tamb√©m v√°rios recordes no Guinness Book, inclusive como o jogo de a√ß√£o de videogame a alcan√ßar o maior valor em vendas em 24 horas.</p>
+		</div><br>
+		<center>
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/m146FOEFeSs" frameborder="5" allowfullscreen></iframe><br><br>
+		</center>
+	</div>
 </body>
 </html>
