--- a/versoes.html
+++ b/versoes.html
@@ -2,13 +2,14 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8"/>
-	<title>Versıes - Gta Stories</title>
+	<title>Vers√µes - Gta Stories</title>
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-<audio controls>
-	<source src="./sound/mscgta.mp3" type="audio/mpeg">
-</audio>
+	<audio controls>
+		<source src="./sound/mscgta.mp3" type="audio/mpeg">
+	</audio>
+
 	<div id="container">
 		<div id="header">
 			<img src="./img/logotipo.jpg">
@@ -16,224 +17,208 @@
 		<div id="menu">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="versoes.html">Versıes</a></li>
-				<li><a href="videos.html">VÌdeos</a></li>
+				<li><a href="versoes.html">Vers√µes</a></li>
+				<li><a href="videos.html">V√≠deos</a></li>
 				<li><a href="contato.html">Contato</a></li>								
 			</ul>
 		</div>
-<table>
-<tr class="linha1">	
-<th>Ano de lanÁamento</th>
-<th>Tipo</th>
-<th>Desenvolvedora</th>
-<th>TÌtulo</th>
-<th>Ano em que se passa</th>
-<th>Local(is) onde se passa</th>
-<th>Protagonista(s)</th>
-<th>Plataforma(s)</th>
-<th>Era</th>
-<th>Nota mÈdia</th>
-</tr>
-
-<tr class="linha2">	
-<td>1997</td>
-<td>Jogo</td>
-<td>DMA Design</td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_(jogo_eletr%C3%B4nico) " target="_blank">GTA</a></b></i></td>
-<td>1997</td>
-<td>Cidades de Liberty City, San Andreas e Vice City</td>
-<td>V·rios</td>
-<td>PS1, Windows, MS-DOS, GBC</td>
-<td>2D</td>
-<td>78,50%</td>
-</tr>
-
-<tr class="linha3">	
-<td>1999</td>
-<td>Pacote de expans„o</td>
-<td>DMA Design</td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_London,_1969" target="_blank">GTA London 1969</a></b></i></td>
-<td>1969</td>
-<td>Cidade de Londres</td>
-<td>V·rios</td>
-<td>PS1, Windows, MS-DOS</td>
-<td>2D</td>
-<td>69%</td>
-</tr>
-
-<tr class="linha2">	
-<td>1999</td>
-<td>Pacote de expans„o</td>
-<td>DMA Design</td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_London,_1961" title="Grand Theft Auto: London, 1961" target="_blank">GTA London 1961</a></b></i></td>
-<td>1961</td>
-<td>Cidades de Londres e Manchester</td>
-<td>V·rios</td>
-<td>Windows</td>
-<td>2D</td>
-<td>?</td>
-</tr>
-
-<tr class="linha3">	
-<td>1999</td>
-<td>Jogo</td>
-<td>DMA Design</td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_2" title="Grand Theft Auto 2" target="_blank">GTA 2</a></b></i></td>
-<td>2013</td>
-<td>Cidade de Anywhere City</td>
-<td>Claude Speed</td>
-<td>PS1, Dreamcast, Windows, GBC</td>
-<td>2D</td>
-<td>69,92%</td>
-</tr>
-
-<tr class="linha2">	
-<td>2001</td>
-<td>Jogo</td>
-<td>Rockstar North</td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_III" title="Grand Theft Auto III" target="_blank">GTA III</a></b></i></td>
-<td>2001</td>
-<td>Cidade de Liberty City</td>
-<td>Claude</td>
-<td>PS2, Xbox, Windows, Mac OS X, iOS, Android, PS3</td>
-<td>3D</td>
-<td>95,19%</td>
-</tr>
-
-<tr class="linha3">	
-<td>2002</td>
-<td>Jogo</td>
-<td>Rockstar North</td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_Vice_City" title="Grand Theft Auto: Vice City" target="_blank">GTA Vice City</a></b></i></td>
-<td>1986</td>
-<td>Cidade de Vice City</td>
-<td>Tommy Vercetti</td>
-<td>PS2, Xbox, Windows, Mac OS X, iOS, Android, PS3, PS4</td>
-<td>3D</td>
-<td>94,43%</td>
-</tr>
-
-<tr class="linha2">	
-<td>2004</td>
-<td>Jogo</td>
-<td>Rockstar North</a></td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_San_Andreas" title="Grand Theft Auto: San Andreas" target="_blank">GTA San Andreas</a></b></i></td>
-<td>1992</td>
-<td>Estado de San Andreas</td>
-<td>Carl "CJ" Johnson</td>
-<td>Xbox, Windows, Mac OS X, iOS, Android, Windows Phone, PS3, Xbox 360, PS4, PS2</td>
-<td>3D</td>
-<td>96,5%</td>
-</tr>
-
-<tr class="linha3">	
-<td>2004</td>
-<td>Jogo</td>
-<td>Digital Eclipse</td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_Advance" title="Grand Theft Auto Advance" target="_blank">GTA Advance</a></b></i></td>
-<td>2000</td>
-<td>Cidade de Liberty City</td>
-<td>Mike</td>
-<td>GBA</td>
-<td>3D (com gr·ficos 2D)</td>
-<td>70,94%</td>
-</tr>
-
-<tr class="linha2">	
-<td>2005</td>
-<td>Jogo</td>
-<td>Rockstar Leeds</td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_Liberty_City_Stories" title="Grand Theft Auto: Liberty City Stories" target="_blank">GTA Liberty City Stories</a></b></i></td>
-<td>1998</td>
-<td>Cidade de Liberty City</td>
-<td>Toni Cipriani</td>
-<td>PS2, PSP, PS3</td>
-<td>3D</td>
-<td>87,54%</td>
-</tr>
-
-<tr class="linha3">	
-<td>2006</td>
-<td>Jogo</td>
-<td>Rockstar Leeds</td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_Vice_City_Stories" title="Grand Theft Auto: Vice City Stories" target="_blank">GTA Vice City Stories</a></b></i></td>
-<td>1984</td>
-<td>Cidade de Vice City</td>
-<td>Victor Vance</td>
-<td>PS2, PSP, PS3</td>
-<td>3D</td>
-<td>85,01%</td>
-</tr>
-
-<tr class="linha2">	
-<td>2008</td>
-<td>Jogo</td>
-<td>Rockstar North</td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_IV" title="Grand Theft Auto IV" target="_blank">GTA IV</a></b></i></td>
-<td>2008</td>
-<td>Cidades de Liberty City e Alderney</td>
-<td>Niko Bellic</td>
-<td>PS3, Xbox 360, Windows</td>
-<td>HD</td>
-<td>96,67%</td>
-</tr>
-
-<tr class="linha3">	
-<td>2009</td>
-<td>Pacote de expans„o</td>
-<td>Rockstar North</td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_IV:_The_Lost_and_Damned" title="Grand Theft Auto IV: The Lost and Damned" target="_blank">GTA IV The Lost and Damned</a></b></i></td>
-<td>2008</td>
-<td>Cidades de Liberty City e Alderney</td>
-<td>Johnny Klebitz</td>
-<td>PS3, Xbox 360, Windows</td>
-<td>HD</td>
-<td>94%</td>
-</tr>
-
-<tr class="linha2">	
-<td>2009</td>
-<td>Pacote de expans„o</td>
-<td>Rockstar North</td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_The_Ballad_of_Gay_Tony" class="mw-redirect" title="Grand Theft Auto: The Ballad of Gay Tony" target="_blank">GTA The Ballad of Gay Tony</a></b></i></td>
-<td>2008</td>
-<td>Cidades de Liberty City e Alderney</td>
-<td>Luis Fernando Lopez</td>
-<td>PS3, Xbox 360, Windows</td>
-<td>HD</td>
-<td>90%</td>
-</tr>
-
-<tr class="linha3">	
-<td>2009</td>
-<td>Jogo</td>
-<td>Rockstar Leeds</td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_Chinatown_Wars" title="Grand Theft Auto: Chinatown Wars" target="_blank">GTA Chinatown Wars</a></b></i></td>
-<td>2009</td>
-<td>Cidade de Liberty City</td>
-<td>Huang Lee</td>
-<td>PSP, Nintendo DS, iOS</td>
-<td>HD (com gr·ficos 3D)</td>
-<td>92,71%</td>
-</tr>
-
-<tr class="linha2">	
-<td>2013</td>
-<td>Jogo</td>
-<td>Rockstar North</td>
-<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_V" title="Grand Theft Auto V" target="_blank">GTA V</a></b></i></td>
-<td>2013</td>
-<td>Condados de Los Santos e Blaine</td>
-<td>Michael de Santa, Franklin Clinton, Trevor Philips</td>
-<td>PS3, Xbox 360, PS4, Xbox One, Windows</td>
-<td>HD</td>
-<td>97%</td>
-</tr>
-</table>
-
-<br><br><br><br>
+		<table>
+			<tr class="linha1">	
+				<th>Ano de lan√ßamento</th>
+				<th>Tipo</th>
+				<th>Desenvolvedora</th>
+				<th>T√≠tulo</th>
+				<th>Ano em que se passa</th>
+				<th>Local(is) onde se passa</th>
+				<th>Protagonista(s)</th>
+				<th>Plataforma(s)</th>
+				<th>Era</th>
+				<th>Nota m√©dia</th>
+			</tr>
+			<tr class="linha2">	
+				<td>1997</td>
+				<td>Jogo</td>
+				<td>DMA Design</td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_(jogo_eletr%C3%B4nico) " target="_blank">GTA</a></b></i></td>
+				<td>1997</td>
+				<td>Cidades de Liberty City, San Andreas e Vice City</td>
+				<td>V√°rios</td>
+				<td>PS1, Windows, MS-DOS, GBC</td>
+				<td>2D</td>
+				<td>78,50%</td>
+			</tr>
+			<tr class="linha3">	
+				<td>1999</td>
+				<td>Pacote de expans√£o</td>
+				<td>DMA Design</td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_London,_1969" target="_blank">GTA London 1969</a></b></i></td>
+				<td>1969</td>
+				<td>Cidade de Londres</td>
+				<td>V√°rios</td>
+				<td>PS1, Windows, MS-DOS</td>
+				<td>2D</td>
+				<td>69%</td>
+			</tr>
+			<tr class="linha2">	
+				<td>1999</td>
+				<td>Pacote de expans√£o</td>
+				<td>DMA Design</td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_London,_1961" title="Grand Theft Auto: London, 1961" target="_blank">GTA London 1961</a></b></i></td>
+				<td>1961</td>
+				<td>Cidades de Londres e Manchester</td>
+				<td>V√°rios</td>
+				<td>Windows</td>
+				<td>2D</td>
+				<td>?</td>
+			</tr>
+			<tr class="linha3">	
+				<td>1999</td>
+				<td>Jogo</td>
+				<td>DMA Design</td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_2" title="Grand Theft Auto 2" target="_blank">GTA 2</a></b></i></td>
+				<td>2013</td>
+				<td>Cidade de Anywhere City</td>
+				<td>Claude Speed</td>
+				<td>PS1, Dreamcast, Windows, GBC</td>
+				<td>2D</td>
+				<td>69,92%</td>
+			</tr>
+			<tr class="linha2">	
+				<td>2001</td>
+				<td>Jogo</td>
+				<td>Rockstar North</td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_III" title="Grand Theft Auto III" target="_blank">GTA III</a></b></i></td>
+				<td>2001</td>
+				<td>Cidade de Liberty City</td>
+				<td>Claude</td>
+				<td>PS2, Xbox, Windows, Mac OS X, iOS, Android, PS3</td>
+				<td>3D</td>
+				<td>95,19%</td>
+			</tr>
+			<tr class="linha3">	
+				<td>2002</td>
+				<td>Jogo</td>
+				<td>Rockstar North</td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_Vice_City" title="Grand Theft Auto: Vice City" target="_blank">GTA Vice City</a></b></i></td>
+				<td>1986</td>
+				<td>Cidade de Vice City</td>
+				<td>Tommy Vercetti</td>
+				<td>PS2, Xbox, Windows, Mac OS X, iOS, Android, PS3, PS4</td>
+				<td>3D</td>
+				<td>94,43%</td>
+			</tr>
+			<tr class="linha2">	
+				<td>2004</td>
+				<td>Jogo</td>
+				<td>Rockstar North</a></td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_San_Andreas" title="Grand Theft Auto: San Andreas" target="_blank">GTA San Andreas</a></b></i></td>
+				<td>1992</td>
+				<td>Estado de San Andreas</td>
+				<td>Carl "CJ" Johnson</td>
+				<td>Xbox, Windows, Mac OS X, iOS, Android, Windows Phone, PS3, Xbox 360, PS4, PS2</td>
+				<td>3D</td>
+				<td>96,5%</td>
+			</tr>
+			<tr class="linha3">	
+				<td>2004</td>
+				<td>Jogo</td>
+				<td>Digital Eclipse</td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_Advance" title="Grand Theft Auto Advance" target="_blank">GTA Advance</a></b></i></td>
+				<td>2000</td>
+				<td>Cidade de Liberty City</td>
+				<td>Mike</td>
+				<td>GBA</td>
+				<td>3D (com gr√°ficos 2D)</td>
+				<td>70,94%</td>
+			</tr>
+			<tr class="linha2">	
+				<td>2005</td>
+				<td>Jogo</td>
+				<td>Rockstar Leeds</td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_Liberty_City_Stories" title="Grand Theft Auto: Liberty City Stories" target="_blank">GTA Liberty City Stories</a></b></i></td>
+				<td>1998</td>
+				<td>Cidade de Liberty City</td>
+				<td>Toni Cipriani</td>
+				<td>PS2, PSP, PS3</td>
+				<td>3D</td>
+				<td>87,54%</td>
+			</tr>
+			<tr class="linha3">	
+				<td>2006</td>
+				<td>Jogo</td>
+				<td>Rockstar Leeds</td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_Vice_City_Stories" title="Grand Theft Auto: Vice City Stories" target="_blank">GTA Vice City Stories</a></b></i></td>
+				<td>1984</td>
+				<td>Cidade de Vice City</td>
+				<td>Victor Vance</td>
+				<td>PS2, PSP, PS3</td>
+				<td>3D</td>
+				<td>85,01%</td>
+			</tr>
+			<tr class="linha2">	
+				<td>2008</td>
+				<td>Jogo</td>
+				<td>Rockstar North</td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_IV" title="Grand Theft Auto IV" target="_blank">GTA IV</a></b></i></td>
+				<td>2008</td>
+				<td>Cidades de Liberty City e Alderney</td>
+				<td>Niko Bellic</td>
+				<td>PS3, Xbox 360, Windows</td>
+				<td>HD</td>
+				<td>96,67%</td>
+			</tr>
+			<tr class="linha3">	
+				<td>2009</td>
+				<td>Pacote de expans√£o</td>
+				<td>Rockstar North</td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_IV:_The_Lost_and_Damned" title="Grand Theft Auto IV: The Lost and Damned" target="_blank">GTA IV The Lost and Damned</a></b></i></td>
+				<td>2008</td>
+				<td>Cidades de Liberty City e Alderney</td>
+				<td>Johnny Klebitz</td>
+				<td>PS3, Xbox 360, Windows</td>
+				<td>HD</td>
+				<td>94%</td>
+			</tr>
+			<tr class="linha2">	
+				<td>2009</td>
+				<td>Pacote de expans√£o</td>
+				<td>Rockstar North</td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_The_Ballad_of_Gay_Tony" class="mw-redirect" title="Grand Theft Auto: The Ballad of Gay Tony" target="_blank">GTA The Ballad of Gay Tony</a></b></i></td>
+				<td>2008</td>
+				<td>Cidades de Liberty City e Alderney</td>
+				<td>Luis Fernando Lopez</td>
+				<td>PS3, Xbox 360, Windows</td>
+				<td>HD</td>
+				<td>90%</td>
+			</tr>
+			<tr class="linha3">	
+				<td>2009</td>
+				<td>Jogo</td>
+				<td>Rockstar Leeds</td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto:_Chinatown_Wars" title="Grand Theft Auto: Chinatown Wars" target="_blank">GTA Chinatown Wars</a></b></i></td>
+				<td>2009</td>
+				<td>Cidade de Liberty City</td>
+				<td>Huang Lee</td>
+				<td>PSP, Nintendo DS, iOS</td>
+				<td>HD (com gr√°ficos 3D)</td>
+				<td>92,71%</td>
+			</tr>
+			<tr class="linha2">	
+				<td>2013</td>
+				<td>Jogo</td>
+				<td>Rockstar North</td>
+				<td><i><b><a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_V" title="Grand Theft Auto V" target="_blank">GTA V</a></b></i></td>
+				<td>2013</td>
+				<td>Condados de Los Santos e Blaine</td>
+				<td>Michael de Santa, Franklin Clinton, Trevor Philips</td>
+				<td>PS3, Xbox 360, PS4, Xbox One, Windows</td>
+				<td>HD</td>
+				<td>97%</td>
+			</tr>
+		</table>
+		<br><br><br><br>
 		<div id="text-body">
-		</div></div>
-
+		</div>
+	</div>
 </body>
 </html>
