--- a/videos.html
+++ b/videos.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8"/>
-	<title>VÌdeos - Gta Stories</title>
+	<title>V√≠deos - Gta Stories</title>
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
@@ -16,42 +16,43 @@
 		<div id="menu">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="versoes.html">Versıes</a></li>
-				<li><a href="videos.html">VÌdeos</a></li>
+				<li><a href="versoes.html">Vers√µes</a></li>
+				<li><a href="videos.html">V√≠deos</a></li>
 				<li><a href="contato.html">Contato</a></li>								
 			</ul>
 		</div>
 
-		<center><br>
+	<center>
 		<div id="titulos">
-		Grand Theft Auto<br>
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/eWvASukjWQU" frameborder="0" allowfullscreen></iframe><br><br>
-		Grand Theft Auto (London 1969)
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/XnmY5Om7Fnc" frameborder="0" allowfullscreen></iframe><br><br>
-		Grand Theft Auto (London 1961)
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/cjfpp_vZQGM" frameborder="0" allowfullscreen></iframe><br><br>
-		Grand Theft Auto 2
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/EaS_pCjHTgY" frameborder="0" allowfullscreen></iframe><br><br>
-		Grand Theft Auto 3
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/RoQStKto_n4" frameborder="0" allowfullscreen></iframe><br><br>
-		Grand Theft Auto (Vice City)
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/f_VBXRZuHTc" frameborder="0" allowfullscreen></iframe><br><br>
-		Grand Theft Auto (San Andreas)
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/daw8xhaGj2s" frameborder="0" allowfullscreen></iframe><br><br>
-		Grand Theft Auto (Advance)
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/3KQFsn6x_Zw" frameborder="0" allowfullscreen></iframe><br><br>
-		Grand Theft Auto (Liberty City Stories)
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/IwUdOhbYlOc" frameborder="0" allowfullscreen></iframe><br><br>
-		Grand Theft Auto IV</h3>
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/IF7xW0pHeEo" frameborder="0" allowfullscreen></iframe><br><br>
-		Grand Theft Auto IV (The Lost and Damned)
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/Mio0WmVMz18" frameborder="0" allowfullscreen></iframe><br><br>
-		Grand Theft Auto (The Ballad of Gay Tony)
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/rv84Oa1b-KA" frameborder="0" allowfullscreen></iframe><br><br>
-		Grand Theft Auto (Chinatown Wars)
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/4UJtvVh0AiI" frameborder="0" allowfullscreen></iframe><br><br>
-		Grand Theft Auto V
-		<iframe width="854" height="480" src="https://www.youtube.com/embed/GDIPhqi9H90" frameborder="0" allowfullscreen></iframe>
-		</center></div>
+			Grand Theft Auto<br>
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/eWvASukjWQU" frameborder="0" allowfullscreen></iframe><br><br>
+			Grand Theft Auto (London 1969)
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/XnmY5Om7Fnc" frameborder="0" allowfullscreen></iframe><br><br>
+			Grand Theft Auto (London 1961)
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/cjfpp_vZQGM" frameborder="0" allowfullscreen></iframe><br><br>
+			Grand Theft Auto 2
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/EaS_pCjHTgY" frameborder="0" allowfullscreen></iframe><br><br>
+			Grand Theft Auto 3
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/RoQStKto_n4" frameborder="0" allowfullscreen></iframe><br><br>
+			Grand Theft Auto (Vice City)
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/f_VBXRZuHTc" frameborder="0" allowfullscreen></iframe><br><br>
+			Grand Theft Auto (San Andreas)
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/daw8xhaGj2s" frameborder="0" allowfullscreen></iframe><br><br>
+			Grand Theft Auto (Advance)
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/3KQFsn6x_Zw" frameborder="0" allowfullscreen></iframe><br><br>
+			Grand Theft Auto (Liberty City Stories)
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/IwUdOhbYlOc" frameborder="0" allowfullscreen></iframe><br><br>
+			Grand Theft Auto IV
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/IF7xW0pHeEo" frameborder="0" allowfullscreen></iframe><br><br>
+			Grand Theft Auto IV (The Lost and Damned)
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/Mio0WmVMz18" frameborder="0" allowfullscreen></iframe><br><br>
+			Grand Theft Auto (The Ballad of Gay Tony)
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/rv84Oa1b-KA" frameborder="0" allowfullscreen></iframe><br><br>
+			Grand Theft Auto (Chinatown Wars)
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/4UJtvVh0AiI" frameborder="0" allowfullscreen></iframe><br><br>
+			Grand Theft Auto V
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/GDIPhqi9H90" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</center>
 </body>
 </html>
