--- a/index.html
+++ b/index.html
@@ -1,38 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<meta charset="utf-8"/>
-	<title>Gta Stories</title>
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lista de versões</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Arial', sans-serif;
+        }
+        body{
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            max-width: 100%;
+        }
+        #app{
+            background-color: #d8d8d8;
+            padding: 32px;
+            border-radius: 16px;
+            max-width: 100%;
+            margin: 8px;
+        }
+        #app h1{
+            text-transform: uppercase;
+            color: #2c2c2c;
+            margin-bottom: 16px;
+            font-size: 22px;
+            text-align: center;
+        }
+        #app ul{
+            list-style-type: none;
+        }
+        #app ul li:not(:last-child){
+            margin-bottom: 8px;
+        }
+        #app ul li a{
+            color: #000;
+            text-decoration: none;
+            display: block;
+            padding: 4px;
+            transition: all .3s;
+            font-size: 16px;
+        }
+        #app ul li a:hover{
+            background-color: rgba(255,255,255,.5);
+        }
+    </style>
 </head>
 <body>
-	<audio controls>
-		<source src="./sound/mscgta.mp3" type="audio/mpeg">
-	</audio>
-
-	<div id="container">
-		<div id="header">
-			<img src="./img/logotipo.jpg">
-		</div>
-
-		<div id="menu">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="versoes.html">Versões</a></li>
-				<li><a href="videos.html">Vídeos</a></li>
-				<li><a href="contato.html">Contato</a></li>								
-			</ul>
-		</div>
-
-		<div id="fontepg">
-			<p>Grand Theft Auto é uma série de jogos de computador e videogames criada por David Jones e Mike Dailly, e posteriormente pelos irmãos Dan e Sam Houser, Leslie Benzies e Aaron Garbut. A maioria dos jogos foi desenvolvida pela Rockstar North (antiga DMA Design) e publicada pela Rockstar Games. O nome da série é um termo policial da língua inglesa utilizado para identificar roubos de automóveis. Grand Theft refere-se a furtos de valor elevado (maior que US$ 40,00 nos Estados Unidos) e Auto designa os automóveis. O nome desse crime, no Brasil, é Roubo Qualificado de Automóveis e em Portugal designa-se por carjacking. A série GTA faz homenagens a diversas personalidades como Eazy-E (inspirou o personagem Ryder no game Grand Theft Auto: San Andreas) e outras.</p>
-			<p>A série é focada em cidades fictícias dominadas pelo crime e pelas gangues de rua, fortemente modeladas com base em grandes metrópoles, principalmente dos Estados Unidos, mas com passagens também pela Inglaterra. Os jogos da série são em mundo aberto e o personagem jogável (um criminoso, protagonista de um enredo repleto de atividades ilegais, como violência, tráfico de drogas, assassinato, prostituição etc.) pode cumprir missões para o progresso da história, bem como participar de ações não lineares, todas consistindo de ação, aventura, condução, RPG, corridas, entre outros.</p>
-			<p>O desenvolvedor de videogames DMA Design foi responsável pelo início da série em 1997, que atualmente conta com onze jogos autônomos e quatro pacotes de expansão. O terceiro jogo da cronologia, Grand Theft Auto III, foi muito elogiado, já que trouxe a série para um cenário 3D com muito mais experiência, e é considerado um título de referência para o jogo Grand Theft Auto clone. Títulos subsequentes, tais como Driv3r, tiveram seu desenvolvimento baseado no padrão introduzido em Grand Theft Auto III.</p>
-			<p>A franquia, assim como Call of Duty, é um dos produtos de entretenimento mais rentáveis na história, arrecadando com seu último lançamento quase um bilhão de dólares nas primeiras 24 horas de lançamento. Bateu também vários recordes no Guinness Book, inclusive como o jogo de ação de videogame a alcançar o maior valor em vendas em 24 horas.</p>
-		</div><br>
-		<center>
-			<iframe width="854" height="480" src="https://www.youtube.com/embed/m146FOEFeSs" frameborder="5" allowfullscreen></iframe><br><br>
-		</center>
-	</div>
+    <div id="app">
+        <h1>Lista de versões</h1>
+        <ul>
+            <li>
+                <a href="./v1">Versão 01 - 23/09/2016</a>
+            </li>
+            <li>
+                <a href="./v2">Versão 02 - 28/03/2019</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
